OnboardingV2Minimal/force-app/main/default/objects/ERP_Setup__c/ERP_Setup__c.object-meta.xml
<CustomObject>
    <description>This object tracks which accounts have been setup in our ERP system.</description>
    <label>ERP Setup</label>
    <nameField>
        <displayFormat>ERP-{00000}</displayFormat>
        <label>ERP Setup Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Setup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>