OnboardingV2Minimal/force-app/main/default/objects/ERP_Setup__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>ERP Setup</relationshipLabel>
    <relationshipName>ERP_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>