OnboardingV2Minimal/force-app/main/default/objects/ERP_Setup__c/fields/Vendor_Customization__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Customization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Customization</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipLabel>ERP Setup</relationshipLabel>
    <relationshipName>ERP_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>